# dmenu-rs

./: .gitignore  Cargo.toml  Cargo.toml~  LICENSE  README  README.md  aaa  build.rs  build2.rs  config.mk  makefile
headers/: fontconfig.h  xlib.h  xlib2.h
src/: Cargo.toml  README.md  additional_bindings.rs  config.rs  config.rs~  drw.rs  drw.rs~  fnt.rs  globals.rs  init.rs  item.rs  main.rs  main.rs~  run.rs  setup.rs  uninit_alloc.rs~  util.rs  xlib_additional.rs
src/config/: Cargo.toml  build.rs
src/config/src/: checkdeps.sh  config.rs  list_plugins.rs  main.rs  util.rs
src/dmenu/: README.md  additional_bindings.rs  clapflags.rs  cli_base.yml  config.rs  drw.rs  fnt.rs  globals.rs  init.rs  item.rs  main.rs  menu.rs  plugin_entry.rs  result.rs  run.rs  setup.rs  util.rs
src/headers/: Cargo.toml  README.md  build.rs  fontconfig.h  xinerama.h  xlib.h
src/headers/src/: main.rs
src/man/: Cargo.toml  README.md  dmenu.1
src/man/src/: lib.rs  see_also.1  usage.1
src/plugins/: README.md
src/plugins/autoselect/: main.rs  plugin.yml
src/plugins/calc/: build.sh  deps.toml  main.rs  plugin.yml
src/plugins/fuzzy/: deps.toml  main.rs  plugin.yml
src/plugins/lookup/: build.sh  deps.toml  engines.rs  main.rs  plugin.yml
src/plugins/maxlength/: main.rs  plugin.yml
src/plugins/password/: main.rs  plugin.yml
src/plugins/spellcheck/: build.sh  deps.toml  main.rs  plugin.yml
src/sh/: README.md  dmenu_path
src/stest/: Cargo.toml  README.md  main.rs
src/stest/src/: config.rs  file.rs  lib.rs  main.rs  semigroup.rs
src/stest/tests/: integration_tests.rs  set-up-block-special-file  set-up-character-special-file  set-up-directory  set-up-directory-with-contents  set-up-executable-file  set-up-file  set-up-file-with-set-group-id  set-up-file-with-set-user-id  set-up-hidden-file  set-up-nonempty-file  set-up-nonexisting-file  set-up-pipe-file  set-up-readable-file  set-up-symbolic-link  set-up-writable-file
