[package]
name = "dmenu-rs"
version = "5.0.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
links = "X11"
build = "build.rs"

[dependencies]
x11 = "2.18.2"
libc = "0.2.69"
servo-fontconfig = "0.5.0"
clipboard = "0.5.0"
regex = "1.3.7"
pledge = "0.4.0"

[build-dependencies]
bindgen = "0.53.2"
walkdir = "2"

[features]
default = ["Xinerama"]
Xinerama = []