[package]
name = "config"
version = "0.0.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

[[bin]]
name = "config"
path = "src/config.rs"

[[bin]]
name = "list-plugins"
path = "src/list_plugins.rs"

[dependencies]
glob = "0.3.0"
itertools = "0.9.0"
man_dmenu = { path = "../man" }
prettytable-rs = "0.8.0"
yaml-rust = "^0.3"

[build-dependencies]
bindgen = "0.53.2"
walkdir = "2"