[package]
name = "config"
version = "0.0.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

[[bin]]
name = "config"
path = "src/config.rs"

[[bin]]
name = "list-plugins"
path = "src/list_plugins.rs"

[dependencies]
glob = "0.3.0"
itertools = "0.9.0"
man_dmenu = { path = "../man" }
prettytable-rs = "0.8.0"
termcolor = "1.1"
yaml-rust = "^0.3"